cmake_minimum_required(VERSION 3.28)
project(Clion)

set(CMAKE_CXX_STANDARD 17)

add_executable(test _Sample/test.cpp)
add_executable(1992G _CF/1992G.cpp)
add_executable(1991E _CF/1991E.cpp)
add_executable(1991F _CF/1991F.cpp)
add_executable(1991D _CF/1991D.cpp)
add_executable(1988D _CF/1988D.cpp)
add_executable(1987E _CF/1987E.cpp)