cmake_minimum_required(VERSION 3.28)
project(Clion)

set(CMAKE_CXX_STANDARD 17)

add_executable(1986G1 _CF/1986G1&G2.cpp)
add_executable(2007A _CF/2007A.cpp)
add_executable(2007B _CF/2007B.cpp)
add_executable(2007C _CF/2007C.cpp)
add_executable(2007D _CF/2007D.cpp)
add_executable(2007E _CF/2007E.cpp)